instalacion desde admin

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 NOTAS
+Debe instalarse desde la cuenta root
 Antes de usar nada se debe tener bien configurado sendemail o sendmail
 si como tener instalado curl
 - Script de mailing [creado]
