--- a/README
+++ b/README
@@ -1,15 +1,11 @@
 NOTAS
-Debe instalarse desde la cuenta root
+
 Antes de usar nada se debe tener bien configurado sendemail o sendmail
-si como tener instalado curl
-- Script de mailing [creado]
+asi como tener instalado curl
 
-- Script que comprueba estado de conexión [en proceso]
--- plantilla crontab --Obligatoriamente esta plantilla tiene que ser propiedad de root:root
+La aplicacion se encarga de enviar por email la ip si esta ha cambiado.
+para ello es suficiente con ejecutar mailing.sh
 
-- Script que comprueba si ha cambiado la ip
--- variable en texto plano
+Por otra parte La propia aplicacion hara las comprobaciones necesarias en el arranque del servidor, enviado la ip por correo solo si esta ha cambiado o es nueva.
 
-- Aplicacion
-
--Se necesita de un scrip en la aplicacion misma que establezca los permisos de forma automatica para ser ejecutado como root
+Dispone de varios archivos de texto *.txt para configurar los campos del email que se mandará. como unico requisito para dichos archivos. los emalis de los destinatarios deben de estar en lineas diferentes.
